[refs #107340] Fix overflow-y for tablet - collapsed menu.

--- a/land/copernicus/theme/skins/copernicus_theme_styles/mobile-app.css
+++ b/land/copernicus/theme/skins/copernicus_theme_styles/mobile-app.css
@@ -226,6 +226,9 @@
 
 /** only for tablet*/
 @media only screen and (min-device-width: 601px) and (max-width: 951px) {
+  div.navbar-collapse.in {
+    overflow-y: unset;
+  }
   div.insitu-news-body,
   div.documentDescription,
   label,
